<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright 2021 Gepardec IT Services GmbH and the CheetUnit contributors
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- release artifact -->
    <groupId>com.gepardec.cheetunit</groupId>
    <artifactId>cheetunit-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Parent module for the CheetUnit integration test framework</description>
    <url>https://cheetunit.github.io/CheetUnit/</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Egor Erofeev</name>
            <email>egor.erofeev@gepardec.com</email>
            <organization>Gepardec IT Services GmbH</organization>
            <organizationUrl>https://www.gepardec.com/</organizationUrl>
        </developer>
        <developer>
            <name>Patrick Holzer</name>
            <email>patrick.holzer@gepardec.com</email>
            <organization>Gepardec IT Services GmbH</organization>
            <organizationUrl>https://www.gepardec.com/</organizationUrl>
        </developer>
        <developer>
            <name>Christian Salmhofer</name>
            <email>christian.salmhofer@gepardec.com</email>
            <organization>Gepardec IT Services GmbH</organization>
            <organizationUrl>https://www.gepardec.com/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/CheetUnit/CheetUnit.git</connection>
        <developerConnection>scm:git:ssh://github.com:CheetUnit/CheetUnit.git</developerConnection>
        <url>https://github.com/CheetUnit/CheetUnit/tree/main</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>

        <skipITs>true</skipITs>
        <skipUnitTests>false</skipUnitTests>

        <junit.version>5.7.0</junit.version>
        <slf4j.version>1.7.30</slf4j.version>
        <jackson-databind.version>2.11.3</jackson-databind.version>
        <okhttp.version>4.9.0</okhttp.version>
        <javassist.version>3.27.0-GA</javassist.version>
        <javaee.version>8.0</javaee.version>
        <commons-io.version>2.6</commons-io.version>
        <wiremock.version>2.27.2</wiremock.version>
        <xstream.version>1.4.14</xstream.version>
        <dozer.version>6.5.0</dozer.version>
        <logback.version>1.2.3</logback.version>
    </properties>

    <modules>
        <module>cheetunit-core</module>
        <module>cheetunit-test</module>
        <module>cheetunit-examples</module>
        <module>cheetunit-wildfly</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>${javassist.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>${xstream.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.dozermapper</groupId>
                <artifactId>dozer-core</artifactId>
                <version>${dozer.version}</version>
            </dependency>
            <!-- test dependencies -->
            <dependency>
                <groupId>com.github.tomakehurst</groupId>
                <artifactId>wiremock-jre8</artifactId>
                <version>${wiremock.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <skipTests>${skipUnitTests}</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <skipITs>${skipITs}</skipITs>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
